--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             weekends seeking healthier habits and being a better person every day.</p>
                         <h3>Skills</h3>
                         <div class="skills">
-                            <div class="skill-item">Marketing Cloud</div>
+                            <div class="skill-item">Marketing Cloud Salesforce</div>
                             <div class="skill-item">Solidity</div>
                             <div class="skill-item">Node.js</div>
                             <div class="skill-item">Mongo DB</div>
@@ -299,7 +299,8 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="pdf/amanda sacchi CV - English.pdf" target="_blank" class="btn">Download CV</a>
+                        <a href="pdf/amanda sacchi CV - Salesforce.pdf" target="_blank" class="btn">CV - Salesforce</a>
+                        <a href="pdf/amanda sacchi CV - BlockChain.pdf" target="_blank" class="btn">CV - BlockChain</a>
                         <a href="#contact" class="btn link-item">Contact me</a>
                     </div>
                 </div>
